--- a/tes.css
+++ b/tes.css
@@ -8,7 +8,7 @@ width:100%;
 padding : 50px 0;
 }
 .banner-sec{background:url(https://static.pexels.com/photos/33972/pexels-photo.jpg)  no-repeat left bottom;  min-height:100px; border-radius: 0 10px 10px 0; padding:0;}
-.container{background:#fff; border-radius: 10px; box-shadow:15px 20px 0px rgba(0,0,0,0.1);}
+.container{background:#fff; border-radius: 10px; box-shadow:15px 20px 0px rgba(255, 255, 255, 1);}
 .carousel-inner{border-radius:0 10px 10px 0;}
 .carousel-caption{text-align:left; left:5%;}
 .login-sec{padding: 50px 30px; position:relative;}
@@ -107,7 +107,7 @@ body {
 h3{background-color: #274F8F;color: #fff;padding: 10px;}
 h4{color:#274F8F;}
 a{color: #fff;text-decoration:none;}
-.tab {float: left;border: 1px solid #ccc;background-color: #f1f1f1;width: 17%;height: 300px;}
+.tab {float: left;border: 1px solid #ccc;background-color: #f1f1f1;width: 100%;height: 300px;}
 .tab button {
     display: block;
     background-color: inherit;
