--- a/tes.css
+++ b/tes.css
@@ -8,6 +8,7 @@ width:100%;
 padding : 50px 0;
 }
 .banner-sec{background:url(https://static.pexels.com/photos/33972/pexels-photo.jpg)  no-repeat left bottom;  min-height:100px; border-radius: 0 10px 10px 0; padding:0;}
+.banner-sec1{ left bottom;  min-height:100px; border-radius: 0 10px 10px 0; padding:0;}
 .container{background:#fff; border-radius: 10px; box-shadow:15px 20px 0px rgba(255, 255, 255, 1);}
 .carousel-inner{border-radius:0 10px 10px 0;}
 .carousel-caption{text-align:left; left:5%;}
@@ -17,6 +18,14 @@ padding : 50px 0;
 .login-sec .copy-text a{color:#E36262;}
 .login-sec h2{margin-bottom:30px; font-weight:800; font-size:30px; color: #DE6262;}
 .login-sec h2:after{content:" "; width:100px; height:5px; background:#FEB58A; display:block; margin-top:20px; border-radius:3px; margin-left:auto;margin-right:auto}
+
+.login-sec1{padding: 0px 0px; position:relative;}
+.login-sec1 .copy-text{position:absolute; width:80%; bottom:20px; font-size:13px; text-align:center;}
+.login-sec1 .copy-text i{color:#FEB58A;}
+.login-sec1 .copy-text a{color:#E36262;}
+.login-sec1 h2{margin-bottom:30px; font-weight:800; font-size:30px; color: #DE6262;}
+.login-sec1 h2:after{content:" "; width:100px; height:5px; background:#FEB58A; display:block; margin-top:20px; border-radius:3px; margin-left:auto;margin-right:auto}
+
 .btn-login{background: #DE6262; color:#fff; font-weight:600;}
 .banner-text{width:70%; position:absolute; bottom:40px; padding-left:20px;}
 .banner-text h2{color:#fff; font-weight:600;}
@@ -87,7 +96,7 @@ body {
 }
 
 #slider {
-  margin: 0 auto;
+  margin: 10px auto;
 }
 
 .slide:nth-child(1) {
@@ -107,7 +116,7 @@ body {
 h3{background-color: #274F8F;color: #fff;padding: 10px;}
 h4{color:#274F8F;}
 a{color: #fff;text-decoration:none;}
-.tab {float: left;border: 1px solid #ccc;background-color: #f1f1f1;width: 100%;height: 300px;}
+.tab {float: left;border: 0px solid #ccc;background-color: #ffff;width: 100%;height: 300px;}
 .tab button {
     display: block;
     background-color: inherit;
